# ImageViewer

./: .gitignore  Cargo.toml  README.md  build.sh
shaders/: rect.frag  rect.vert
src/: app.rs  main.rs  window.rs
src/os/: manager.rs  mod.rs  window.rs
src/os/linux/: host.rs
src/shaders/: rectangle.rs
